--- a/src/controllers/views/main-view.ejs
+++ b/src/controllers/views/main-view.ejs
@@ -20,7 +20,13 @@
             <button type="submit" class="btn btn-outline-primary w-100">Submit</button>
         </form>
     </div>
-    <script src="/js/form.js"></script>
+
+    <% if(true){ %>
+        <div class="alert">
+            Something went wrong or invalid
+        </div>
+        <% } %>
+            <script src="/js/form.js"></script>
 </body>
 
 </html>
