added error in case main-view.ejs

--- a/src/controllers/views/main-view.ejs
+++ b/src/controllers/views/main-view.ejs
@@ -21,7 +21,7 @@
         </form>
     </div>
 
-    <% if(true){ %>
+    <% if(error){ %>
         <div class="alert">
             Something went wrong or invalid
         </div>
